FrontEnd/Core/Scss/masterpage.scss
/* ... */
.on-canvas {
    .main-menu {
        nav {
            overflow: visible;

            .menu-scroller {
                width: 100%;
                overflow: auto;
                scrollbar-width: none;
            }

            a {
                span {
                    display: block;
                    font-size: 11px;
                    text-align: center;
                    margin-top: -14px;
                    margin-bottom: 15px;
                    padding: 0px 3px;
                    height: 30px;
                }

                &:hover {
                    span {
                        font-size: 12px;
                        transition: font-size 150ms ease-in-out 0ms;
                        opacity: 1;
                        pointer-events: all;
                    }
                }
            }

            button {
                display: none;
                pointer-events: none;
            }
        }
    }
}

main {
    @include transition(50ms);
    overflow: hidden;
    padding: 10px;
    position: fixed;
    top: 105px;
    left: 80px;
    right: 0;
    bottom: 0;
    z-index: 1;

    @include xl {
        padding: 20px;
        top: 70px;
    }

    .window-container {
        @include transition(50ms);
        height: 100%;
        overflow: visible !important;
        width: 100%;
    }

    .iframe-container {
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;

        > iframe {
            border: 0;
            height: 100%;
            width: 100%;

            &:not(.active) {
                display: none;
            }
        }
    }

    &.login {
        .iframe-container {
            pointer-events: none;
        }
    }
}

#menu-btn {
    border-right: {
        color: $line-color;
        width: 1px;
        style: solid;
    }

    display: block;
    z-index: 30;

    > ins {
        font-size: 26px;
    }
}

#side-btn {
    @include header-shadow($black-color, 0.05);
    @include transition(50ms);
    background: $white-color;

    border-left: {
        color: $line-color;
        width: 1px;
        style: solid;
    }

    border-radius: 0 5px 5px 0;
    display: block;
    height: 60px;
    line-height: 60px;
    position: fixed;
    top: 50%;
    left: 80px;
    width: 30px;
    z-index: 5;

    @include xl {
        display: none;
    }

    > ins {
        @include transition(50ms);
        font-size: 12px;
        position: absolute;
        left: 0;
        width: 30px;
        margin: 0 !important;
        padding: 0 9px;
    }
}

.form-inline {
    padding: 0 20px;

    h1 {
        font: 30px/43px $font-book;
    }

    label {
        font: 15px/24px $font-bold;
        color: $grey-color;
        display: block;
        padding-left: 2px;
    }

    .hint {
        font: 14px/17px $font-book;
        font-style: italic;
        color: $grey-color;
        padding-left: 2px;

        strong {
            font: revert;
        }
    }

    input {
        min-width: 50%;
        max-width: 100%;
        width: 600px;
    }

    input[type=checkbox],
    input[type=radio] {
        width: 14px;
        height: 14px;
        min-width: 14px;
        max-width: 14px;
    }

    fieldset {
        border: none;

        border-top: {
            color: $grey-color;
            style: solid;
            width: 1px;
        }

        margin-top: 15px;

        legend {
            background-color: $grey-color;
            color: $white-color;
            padding: 0 10px;
            border-radius: 3px;
        }
    }
}

body {
    &.menu-active {
        nav {
            width: 200px;

            @include lg {
                width: 300px;
            }

            strong {
                max-height: 40px;
                padding-left: 22px;
            }

            .side-sub-menu {
                margin-bottom: 15px;
            }
        }

        #side-btn {
            left: 200px;

            @include lg {
                left: 300px;
            }

            > ins {
                transform: rotate(180deg);
            }
        }

        main {
            left: 200px;

            @include lg {
                left: 300px;
            }

            &.login {
                left: 0;
            }
        }
    }

    &.off-canvas {
        nav {
            transform: translateX(-110%);
        }

        #side-btn {
            left: -50px;
        }

        main {
            left: 0;
        }
    }
}

/** Fix for CSS bug Kendo, dropdown inside a dialog will otherwise not be properly visible. **/
.k-animation-container-shown {
    z-index: 1100 !important;
}

// Button to send feedback about bugs etc.
#bugButton {
    position: fixed;
    z-index: 10000;
    border-radius: 100%;
    min-height: 50px;
    min-width: 50px;
    height: 50px;
    width: 50px;
    right: 20px;
    bottom: 20px;
    margin-right: 20px;
    padding: 0;
    background-color: $text-color;
    color: $white-color;
    font-size: 32px;
    cursor: pointer;

    &:hover {
        background-color: $primary-hover-color;
        box-shadow: 0 2px 6px rgba($black-color, 0.2), 0 2px 3px rgba($black-color, 0.05);
    }
}

// Button to send feedback about bugs etc.
#bugButton {
    position: fixed;
    z-index: 10000;
    border-radius: 100%;
    min-height: 50px;
    min-width: 50px;
    height: 50px;
    width: 50px;
    right: 20px;
    bottom: 20px;
    margin-right: 20px;
    padding: 0;
    background-color: $text-color;
    color: $white-color;
    font-size: 32px;
    cursor: pointer;

    &:hover {
        background-color: $primary-hover-color;
        box-shadow: 0 2px 6px rgba($black-color, 0.2), 0 2px 3px rgba($black-color, 0.05);
    }
}

ul.totp-backup-codes {
    display: flex;
    flex-wrap: wrap;
    margin: 10px 0;

    li {
        flex: 50%;
        text-align: center;
    }
}

.change-password-prompt input {
    width: 100%;
}

